--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Esto es una prueba del SSH configuradito</p>
+    <p>Esto es una prueba del SSH configuraditoxx</p>
 </body>
 </html>
